@@ -1,4 +1,5 @@
 3.0.4
+ * AssertionError when listing sstable files on inconsistent disk state (CASSANDRA-11156)
  * Fix wrong rack counting and invalid conditions check for TokenAllocation
    (CASSANDRA-11139)
  * Avoid creating empty hint files (CASSANDRA-11090)
